--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:lib": "vite build --config ./build/lib.config.ts",
+    "format": "prettier --write src/"
   },
   "dependencies": {
+    "prismjs": "^1.29.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -19,8 +22,12 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.1",
+    "prettier": "^3.2.5",
+    "sass": "^1.70.0",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-dts": "^3.7.2",
+    "vite-plugin-md": "^0.21.5",
     "vue-tsc": "^1.8.27"
   }
 }
