--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "odos-ui",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": false,
   "type": "module",
+  "main": "lib/odos-ui.umd.js",
+  "module": "lib/odos-ui.es.js",
+  "types": "lib/packages/index.d.ts",
+  "author": "kwr011024@163.com",
+  "description": "ODOSUI,一套为医疗场景准备的vue3组件库",
+  "keywords": [
+    "odos",
+    "医疗",
+    "vue3"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "build": "vue-tsc --noEmit && vite build --config ./build/vite.config.ts",
     "build:lib": "vite build --config ./build/lib.config.ts",
+    "preview": "vite preview",
     "format": "prettier --write src/"
   },
   "dependencies": {
