--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "vite-plugin-dts": "^3.7.2",
     "vite-plugin-md": "^0.21.5",
     "vue-tsc": "^1.8.27"
-  }
+  },
+  "files": [
+    "lib",
+    "styles"
+  ]
 }
