--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build --config ./build/vite.config.ts",
+    "build": "vite build",
     "build:lib": "vite build --config ./build/lib.config.ts",
     "preview": "vite preview",
     "format": "prettier --write src/"
