--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.70.0",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.11",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.2",
     "vite-plugin-dts": "^3.7.2",
     "vite-plugin-md": "^0.21.5",
     "vue-tsc": "^1.8.27"
