--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,9 +41,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "packages/*": ["./packages/*"],
-      "styles/*": ["./styles/*"],
-      "types/*": ["./types/*"]
+      "packages/*": ["./packages/*"]
     }
   }
 }
