--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ant-design-vue": "^4.1.2",
     "prismjs": "^1.29.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
