--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "build": "vite build && node script/copyDir.js",
     "build:lib": "vite build --config ./build/lib.config.ts",
     "preview": "vite preview",
-    "format": "prettier --write src/"
+    "format:src": "prettier --write src/",
+    "format": "prettier --write src/",
+    "format:packages": "prettier --write packages/"
   },
   "dependencies": {
     "ant-design-vue": "^4.1.2",
