--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format:packages": "prettier --write packages/"
   },
   "dependencies": {
-    "ant-design-vue": "^4.1.2",
+    "ant-design-vue": "^4.2.1",
     "prismjs": "^1.29.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
+    "@types/prismjs": "^1.26.4",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
