--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.1",
+    "dayjs": "^1.11.11",
     "prismjs": "^1.29.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
