--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "preview": "vite preview",
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
-    "format:packages": "prettier --write packages/"
+    "format:packages": "prettier --write packages/",
+    "push": "pnpm build:lib && npm publish"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.1",
