--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odos-ui",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "private": false,
   "type": "module",
   "main": "lib/odos-ui.umd.js",
@@ -21,7 +21,7 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push": "pnpm build:lib && npm publish"
+    "push": "git push && pnpm build:lib && npm publish"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.3",
