--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push": "pnpm build:lib && npm publish"
+    "push": "pnpm build:lib && npm publish --registry https://registry.npmjs.org"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.3",
