--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ant-design-vue": "^4.2.3",
     "dayjs": "^1.11.11",
+    "mitt": "^3.0.1",
     "prismjs": "^1.29.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
