--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odos-ui",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "private": false,
   "type": "module",
   "main": "lib/odos-ui.umd.js",
@@ -13,6 +13,10 @@
     "医疗",
     "vue3"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Even-rk/blog"
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "vite build && node script/copyDir.js",
