--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.11",
     "prismjs": "^1.29.0",
     "vue": "^3.4.15",
+    "vue-drag-select-pro": "^1.1.0",
     "vue-router": "^4.2.5",
     "vuelidate": "^0.7.7"
   },
