--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "vue-tsc": "^1.8.27"
   },
   "files": [
-    "lib",
-    "types"
+    "lib/packages",
+    "lib/odos-ui.umd.js",
+    "lib/odos-ui.es.js",
+    "lib/style.css"
   ]
 }
