--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push": "pnpm build:lib && npm publish --registry https://registry.npmjs.org"
+    "push": "pnpm build:lib && npm publish"
   },
   "dependencies": {
+    "@vueuse/core": "^12.7.0",
     "ant-design-vue": "^4.2.3",
     "dayjs": "^1.11.11",
     "prismjs": "^1.29.0",
