--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push": "pnpm build:lib && npm publish"
+    "push": "pnpm build:lib && npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/"
   },
   "dependencies": {
     "@vueuse/core": "^12.7.0",
