--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "odos-ui",
-  "version": "0.3.9",
+  "version": "0.3.12",
   "private": false,
   "type": "module",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "types": "es/index.d.ts",
+  "main": "lib/odos-ui.umd.js",
+  "module": "lib/odos-ui.es.js",
+  "types": "lib/packages/index.d.ts",
   "author": "kwr011024@163.com",
   "description": "ODOSUI,一套为医疗场景准备的vue3组件库",
   "keywords": [
@@ -20,7 +20,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build && node script/copyDir.js",
-    "build:lib": "vite build --config ./build/lib.config.ts && node script/moveFiles.js",
+    "build:lib": "vite build --config ./build/lib.config.ts",
     "preview": "vite preview",
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
@@ -54,22 +54,10 @@
     "vite-plugin-md": "^0.21.5",
     "vue-tsc": "^1.8.27"
   },
-  "exports": {
-    ".": {
-      "types": "./es/index.d.ts",
-      "import": "./es/index.js",
-      "require": "./lib/index.js"
-    },
-    "./es": "./es/index.js",
-    "./lib": "./lib/index.js",
-    "./*": {
-      "types": "./es/*.d.ts",
-      "import": "./es/*.js",
-      "require": "./lib/*.js"
-    }
-  },
   "files": [
-    "es",
-    "lib"
+    "lib/packages",
+    "lib/odos-ui.umd.js",
+    "lib/odos-ui.es.js",
+    "lib/style.css"
   ]
 }
