--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "odos-ui",
-  "version": "0.3.13",
+  "version": "0.3.14",
   "private": false,
   "type": "module",
-  "main": "lib/odos-ui.umd.js",
-  "module": "lib/odos-ui.es.js",
-  "types": "lib/packages/index.d.ts",
+  "main": "lib/umd/odos-ui.umd.js",
+  "module": "lib/es/index.js",
+  "types": "lib/es/index.d.ts",
+  "style": "lib/umd/style.css",
+  "exports": {
+    ".": {
+      "types": "./lib/es/index.d.ts",
+      "import": "./lib/es/index.js",
+      "require": "./lib/umd/odos-ui.umd.js",
+      "style": "./lib/umd/style.css"
+    },
+    "./es/*": "./lib/es/*",
+    "./styles/*": "./lib/es/styles/*",
+    "./package.json": "./package.json"
+  },
   "author": "kwr011024@163.com",
   "description": "ODOSUI,一套为医疗场景准备的vue3组件库",
   "keywords": [
@@ -25,7 +37,7 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push": "pnpm build:lib && npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/"
+    "push": "pnpm build:lib && npm publish --registry=https://registry.npmjs.org/"
   },
   "dependencies": {
     "@vueuse/core": "^12.7.0",
@@ -55,9 +67,6 @@
     "vue-tsc": "^1.8.27"
   },
   "files": [
-    "lib/packages",
-    "lib/odos-ui.umd.js",
-    "lib/odos-ui.es.js",
-    "lib/style.css"
+    "lib"
   ]
 }
