--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odos-ui",
-  "version": "0.3.14",
+  "version": "0.3.15",
   "private": false,
   "type": "module",
   "main": "lib/umd/odos-ui.umd.js",
@@ -15,7 +15,7 @@
       "style": "./lib/umd/style.css"
     },
     "./es/*": "./lib/es/*",
-    "./styles/*": "./lib/es/styles/*",
+    "./umd/*": "./lib/umd/*",
     "./package.json": "./package.json"
   },
   "author": "kwr011024@163.com",
@@ -37,7 +37,7 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push": "pnpm build:lib && npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/"
+    "push": "pnpm build:lib && npm publish --registry=https://registry.npmjs.org"
   },
   "dependencies": {
     "@vueuse/core": "^12.7.0",
