--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odos-ui",
-  "version": "0.3.18",
+  "version": "0.3.19",
   "private": false,
   "type": "module",
   "main": "lib/umd/odos-ui.umd.js",
@@ -67,6 +67,7 @@
     "vue-tsc": "^1.8.27"
   },
   "files": [
-    "lib"
+    "lib",
+    "types"
   ]
 }
