--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odos-ui",
-  "version": "0.3.19",
+  "version": "0.3.20",
   "private": false,
   "type": "module",
   "main": "lib/umd/odos-ui.umd.js",
@@ -14,8 +14,7 @@
       "require": "./lib/umd/odos-ui.umd.js",
       "style": "./lib/umd/style.css"
     },
-    "./es/*": "./lib/es/*",
-    "./umd/*": "./lib/umd/*",
+    "./lib/*": "./lib/*",
     "./package.json": "./package.json"
   },
   "author": "kwr011024@163.com",
