--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "element-plus": "^2.9.7",
     "prismjs": "^1.29.0",
     "vue": "^3.4.15",
+    "vue-cropper": "^1.1.4",
     "vue-drag-select-pro": "^1.1.0",
     "vue-router": "^4.2.5",
     "vuelidate": "^0.7.7"
@@ -55,6 +56,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
     "@types/prismjs": "^1.26.4",
+    "@types/vue-cropperjs": "^4.1.6",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
