feat(TocNav): 新增目录导航组件及相关功能
- 在项目中添加了TocNav组件，用于生成和显示文档目录

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@vue/tsconfig": "^0.5.1",
     "@yankeeinlondon/code-builder": "^1.2.1",
     "inquirer": "^12.5.0",
+    "markdown-it-anchor": "^9.2.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.70.0",
