feat(DatePicker): 使用 Floating UI 改进日期选择器弹出层
- 添加 Floating UI 依赖库
- 重构日期选择器组件，使用 Teleport 组件将弹出层渲染到 body
- 优化弹出层样式和布局
- 改进日期输入框和弹出层的交互逻辑

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "createComp": "node shell/create-components.js"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.6",
     "@vueuse/core": "^12.7.0",
     "ant-design-vue": "^4.2.3",
     "dayjs": "^1.11.11",
