--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push:npm": "npm publish --registry=https://registry.npmjs.org",
-    "push": "npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/",
+    "push:npm": "pnpm build:lib && npm publish --registry=https://registry.npmjs.org",
+    "push": "pnpm build:lib && npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/",
     "createComp": "node shell/create-components.js"
   },
   "dependencies": {
