--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odos-ui",
-  "version": "0.5.11",
+  "version": "0.5.12",
   "private": false,
   "type": "module",
   "main": "lib/umd/odos-ui.umd.js",
@@ -36,8 +36,8 @@
     "format:src": "prettier --write src/",
     "format": "prettier --write src/",
     "format:packages": "prettier --write packages/",
-    "push:npm": "pnpm build:lib && npm publish --registry=https://registry.npmjs.org",
-    "push": "pnpm build:lib && npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/",
+    "push:npm": "npm publish --registry=https://registry.npmjs.org",
+    "push": "npm publish --registry=https://packages.aliyun.com/619daf222873bc436ca52219/npm/npm-registry/",
     "createComp": "node shell/create-components.js"
   },
   "dependencies": {
